<resources>
    <string name="app_name">MusicNoteSync</string>
    <string name="action_settings">Settings</string>
    <string name="main_notesheets">Notesheets</string>
    <string name="take_photo">Take a photo</string>
    <string name="select_file">Select a File</string>
    <string name="select_format">Select Format</string>
    <string name="temp_bluetooth_btn">Temporary Bluetooth Button</string>
    <string name="bluetooth_connect">Connect to device</string>
    <string name="bluetooth_no_support">Device does not support bluetooth</string>
    <string name="bluetooth_enabled">Bluetooth enabled</string>
    <string name="bluetooth_not_enabled">Bluetooth not enabled</string>
    <string name="ask_for_bluetooth">Active Bluetooth to start server</string>
    <string name="bluetooth_successful_connect">Devices are connected</string>
    <string name="bluetooth_connect_failure">No connection established</string>
    <string name="bluetooth_device_is_server">Error: Device is connected to clients</string>
    <string name="add_folder">Add Folder</string>
    <string name="move_file">Move</string>
    <string name="rename_file">Rename File</string>
    <string name="delete_file">Delete File</string>
    <string name="rename">Rename</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="bluetooth_connection_manager">Connection Manager</string>
    <string name="error_upload_notesheets_only">Error: Only upload Notesheets</string>
    <string name="error_upload_notesheets">Error uploading notesheet</string>
    <string name="upload_notesheet_successful">Notesheet uploaded successfully</string>
    <string name="error_creating_activity">Error while creating activity</string>
    <string name="send_notesheet">Send Notesheet</string>
    <string name="uploading_Notesheet">Uploading Notesheet...</string>
    <string name="transfer_successful">Transfer successfull</string>
    <string name="transfer_unsuccessful">Error receiving notesheet</string>
    <string name="open_notesheet">Open Notesheet</string>
    <string name="notesheet_not_found">Notesheet not found</string>
    <string name="notesheet_not_found_message">This notesheet has not been shared yet!</string>
    <string name="make_me_visible">Make me visible</string>
</resources>
