<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rename_file"
        android:id="@+id/btnRenameFile"
        android:drawableLeft="@drawable/ic_sort_by_alpha_black_24dp"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/btnTakePicture"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_file"
        android:id="@+id/btnDeleteFile"
        android:drawableLeft="@drawable/ic_clear_black_24dp"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/btnMoveFile"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_file"
        android:id="@+id/btnMoveFile"
        android:drawableLeft="@drawable/ic_exit_to_app_black_24dp"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/btnRenameFile"
        android:layout_alignParentStart="true" />

</RelativeLayout>